--- a/level3_design/Makefile
+++ b/level3_design/Makefile
@@ -4,12 +4,13 @@ TOPLEVEL_LANG ?= verilog
 
 PWD=$(shell pwd)
 
-VERILOG_SOURCES = $(PWD)/               # provide your design path
+VERILOG_SOURCES = $(PWD)/c499.v               # provide your design path
 
-TOPLEVEL :=           # design file
-MODULE   :=     # test file
+TOPLEVEL := c499        # design file
+MODULE   := test_c499   # test file
 
 include $(shell cocotb-config --makefiles)/Makefile.sim
 
 clean_all: clean
 	rm -rf *.xml sim_build __pycache__ 
+
